--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@google/genai": "^0.15.0",
     "@radix-ui/react-slot": "^1.2.2",
+    "@solana/web3.js": "^1.98.2",
+    "bs58": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.12.1",
